--- a/assets/css/componentes/video.css
+++ b/assets/css/componentes/video.css
@@ -36,12 +36,12 @@
     background-position: center left 55%;
 }
 
-.cartao-de-vide--imagem {
+.cartao-de-video--imagem {
     width: 100%;
     height: 100%;
 }
 
-.cartao-de-vide--titulo {
+.cartao-de-video--titulo {
     color: var(--preto);
     font-size: var(--tamanho-destaque);
     font-weight: var(--peso-destaque);
